--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # \u914d\u7f6e\u8fde\u63a5\u6570\u636e\u5e93\u7684\u9a71\u52a8\u7c7b
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 # \u914d\u7f6e\u8fde\u63a5\u6570\u636e\u5e93\u7684URL
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot_db
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 # \u914d\u7f6e\u8fde\u63a5\u6570\u636e\u5e93\u7684\u7528\u6237\u540d
 spring.datasource.username=root
 # \u914d\u7f6e\u8fde\u63a5\u6570\u636e\u5e93\u7684\u5bc6\u7801
